# GP

./: .gitattributes  .gitignore  CLAUDE.md  README.md  RPLIDAR_A1M8_Map_Quality_Report.md  Wheel_Odometry_IMU_Fusion_25GA370_GY87.md  emaar-albina.com.txt  lidar-map-quality.md  robot.nxs  robot2.nxs  usage-report.csv
attic/: README.md
common/: pyproject.toml
common/gpcore/: __init__.py  logging_setup.py
common/gpcore/config/: __init__.py  loader.py
common/gpcore/kinematics/: __init__.py  diff_drive.py
common/gpcore/nav/: __init__.py  goto_controller.py
common/gpcore/protocol/: __init__.py  channels.py  commands.py  envelope.py
common/gpcore/serialproto/: __init__.py  mega_commands.py  mega_parser.py
config/: fastdds_udp_only.xml  fleet.yaml  robot1.yaml  robot2.yaml  robot3.yaml
dashboard/: dash.py
dashboard_qt/: alerts.py  app_config.py  main.py  requirements.txt
docs/: bench_robot2_v5.md  chat_log_redacted.md  claude_context_sync.md  field_debug_report_2026-06-11.md  incident_log.md  protocol.md  robot3_flashing.md  runbook_demo_day.md
gateway/: gateway_node.py  health_aggregator.py  zmq_server.py
mapping/: mapper.yaml  slam_only.py
navigation/: robot1_bridge.py  robot1_goto.py  robot2_bridge.py  robot2_goto.py  robot2_odom.py
rasp_cmd/: robot1.sh  robot2.sh
robots/: README.md
systemd/: 99-gp-serial.rules  install_systemd.sh
tests/: test_alerts.py  test_commands.py  test_config_loader.py  test_diff_drive.py  test_envelope.py  test_gateway_roundtrip.py  test_goto_controller.py  test_mega_commands.py  test_mega_parser.py  (+2 more)
(+82 files in other folders)
